# PBRRenderTest

./: .gitmodules  CMakeLists.txt  README.md  bdvert.glsl  build.bat  fbfrag.glsl  fbvert.glsl  frag.glsl  main.cpp  untitled.fbx  vert.glsl
lib/x64/: assimp.lib
res/: DamagedHelmet.fbx
shaders/: bdfrag.glsl  fbfrag.glsl  frag.glsl  vert.glsl
